# rag_microservice

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  api_router_factory.py  ask_response_mapper.py  dependencies.py  exception_handler_registry.py
app/api/routes/: __init__.py  ask.py  upload.py
app/api/schemas/: __init__.py  ask.py  ask_response.py  error_detail.py  error_response.py  health.py  upload.py
app/bootstrap/: __init__.py  application_factory.py
app/core/: __init__.py
app/core/config/: __init__.py  settings.py
app/core/exceptions/: __init__.py  domain_error.py  embedding_error.py  file_format_error.py  llm_unavailable_error.py  search_system_unavailable_error.py  vector_db_error.py
app/core/logging/: __init__.py  json_log_formatter.py  logger_provider.py  logging_configurator.py  operation_tracer.py
app/core/middleware/: __init__.py  trace_id_middleware.py
app/core/trace/: __init__.py  trace_context.py
app/domain/: __init__.py  chunk_metadata.py  embedding_vector.py  prompt.py  prompt_builder.py  prompt_template_source.py  retrieved_context.py  search_result.py  search_results.py  text_chunk.py  text_chunks.py  text_splitter.py
app/domain/prompts/: default.txt
app/infrastructure/: __init__.py  infrastructure_factory.py
app/services/: __init__.py  app_container.py  app_container_factory.py  document_ingest_result.py  document_service.py  query_result.py  query_service.py  search_system_guard.py
docs/: README.ru.md  SPECIFICATION.md  architecture.md
scripts/: docker_clean.ps1  docker_free_memory.ps1  docker_rebuild.ps1  run_docker.ps1  run_local.ps1
tests/: conftest.py
tests/integration/: test_ask.py  test_health.py  test_search_system_unavailable.py  test_upload.py  test_upload_e2e.py  test_validation.py
tests/unit/: test_local_embedding_provider.py  test_prompt_builder.py  test_settings.py  test_text_splitter.py
(+15 files in other folders)
