[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-service"
version = "0.1.0"
description = "RAG microservice with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.0",
    "chromadb>=0.5",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
local = [
    "sentence-transformers>=3.0",
    "einops",
]
# For local installs on CPU-only hosts (optional, speeds up pip):
#   pip install torch --index-url https://download.pytorch.org/whl/cpu
#   pip install ".[local]"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "ANN",
    "D",
    "S",
    "ASYNC",
    "FAST",
]
ignore = [
    "D100",
    "D104",
    "D107",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "D", "S101", "E501", "I"]
"app/infrastructure/vectorstore/chroma_store.py" = ["ANN401"]
"app/infrastructure/embeddings/local_embedding_provider.py" = ["ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "chromadb"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["sentence_transformers.*"]
ignore_missing_imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
